--- a/News_styleSheet.css
+++ b/News_styleSheet.css
@@ -5,7 +5,7 @@
 }
 .all-cont{
     width: 100%;
-    max-width: 1000px;
+    max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
     border: 1px solid #000;
@@ -37,7 +37,7 @@ cards
 #demo{
     display: grid;
     gap: 10px;
-    grid-template-columns: 1fr, 1fr;
+    grid-template-columns: repeat(2, 1fr);
     height: 2000px;
     overflow: hidden;
 }
