Center the news header

--- a/News_styleSheet.css
+++ b/News_styleSheet.css
@@ -49,11 +49,12 @@ cards
     height: 40px;
     background-color: #000;
     color: #fff;
-    margin: 10px 0 10px 0;
+    margin: 10px auto;
     padding: 5px;
     width: 80%;
     max-width: 500px;
 }
 .cart h1{
     font-size: 20px;
+    text-align: center;
 }
