--- a/News_styleSheet.css
+++ b/News_styleSheet.css
@@ -39,6 +39,7 @@ cards
     grid-template-columns: 1fr;
     height: 2000px;
     overflow: hidden;
+    position: relative;
 }
 .cart{
     height: 40px;
@@ -68,6 +69,6 @@ cards
 }
 @media screen and (max-width: 300px){
     #newsLink{
-        font-size: 1rem;
+        font-size: .9rem;
     }
 }
