--- a/News_styleSheet.css
+++ b/News_styleSheet.css
@@ -74,6 +74,9 @@ cards
 }
 @media screen and (max-width: 300px){
     #newsLink{
-        font-size: .9rem;
+        font-size: .8rem;
+    }
+    #brand{
+        font-size: 2rem;
     }
 }
