--- a/News_styleSheet.css
+++ b/News_styleSheet.css
@@ -64,10 +64,15 @@ cards
 }
 
 /*=============Responsiveness starts===============*/
-@media screen and (min-width: 700px){
+@media screen and (min-width: 800px){
     #demo{
         grid-template-columns: repeat(2, 1fr);
     }
+    #newsLink{
+        font-size: 1.1rem;
+    }
+}
+@media screen and (min-width: 967px){
     #newsLink{
         font-size: 1.5rem;
     }
