--- a/News_styleSheet.css
+++ b/News_styleSheet.css
@@ -71,7 +71,7 @@ cards
     width: 300px;
     height: 350px;
     padding: 10px;
-    color: chartreuse;
+    color: rgb(0, 0, 0);
     /* From https://css.glass */
     background: rgba(255, 255, 255, 0.12);
     border-radius: 16px;
@@ -79,7 +79,7 @@ cards
     backdrop-filter: blur(2.3px);
     -webkit-backdrop-filter: blur(2.3px);
     border: 1px solid rgba(255, 255, 255, 0.17);
-  
+   overflow: scroll;
     z-index: 10;
 }
 
